# fly-rust-api-template

./: Cargo.toml  Dockerfile  config-beta.json  deploy.sh  fly.toml
.github/workflows/: deploy-beta.yml  rust.yml
src/: config.rs  http_util.rs  main.rs  util.rs
src/api/: mod.rs
