[package]
name = "fly-rust-api-template"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "macros"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
confique = { version = "0.2.5", default-features = false, features = ["json5"] }
governor = "0.6.3"
proxy-header = { version = "0.1.0", features = ["tokio"] }
serde = { version = "1.0.203", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-io-timeout = "1.2.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "cors", "compression-full", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
humantime = "2.1.0"
futures-util = "0.3.30"
